# apps/api/openapi.yaml
@@ -38,8 +38,7 @@ paths:
           required: true
           schema:
             type: string
-            enum:
-              - iciba
+            enum: []
       requestBody:
         required: true
         content:
@@ -75,8 +74,7 @@ paths:
           required: true
           schema:
             type: string
-            enum:
-              - iciba
+            enum: []
       requestBody:
         required: true
         content:
@@ -112,8 +110,7 @@ paths:
           required: true
           schema:
             type: string
-            enum:
-              - iciba
+            enum: []
       requestBody:
         required: true
         content:
@@ -149,8 +146,7 @@ paths:
           required: true
           schema:
             type: string
-            enum:
-              - iciba
+            enum: []
       responses:
         '200':
           description: Supported language pairs
